# rust-hichat-api

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/commands/: mod.rs
src/commands/hello/: hello.rs  mod.rs
src/commands/ping/: check.rs  mod.rs
src/config/: database.rs  mod.rs  redis.rs
src/entities/: users.rs
src/handlers/: mod.rs  users_handlers.rs
src/models/: users.rs
src/routes/: app_router.rs  mod.rs  user_router.rs
src/services/: mod.rs  user_service.rs
src/task/: task.rs
src/task/jobs/time/: time.rs
src/task/sched/: jobs_load.rs  mod.rs  sched.rs
src/test/: test.rs
